--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:instagram": "nodemon instagram/index.js",
+    "dev:unsplash": "nodemon unsplash/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "puppeteer": "^9.0.0"
   },
   "devDependencies": {
-    "git-commit-msg-linter": "^3.1.0"
+    "git-commit-msg-linter": "^3.1.0",
+    "nodemon": "^2.0.7"
   }
 }
